# SLURM_CLI

./: .gitignore  README.md  config_store.py  constants.py  dash_logic.py  dash_ui.py  forecast_cli.py  format_utils.py  history.md  interactive_slurm.py  pickers.py  plot_gpu_time_scatter.py  plot_gpu_usage_forecast.py  pyproject.toml  pyrightconfig.json  slurm_backend.py
docs/: ARCHITECTURE.md  COMMANDS.md  INSTALL.md  REMOTE.md  TROUBLESHOOTING.md
src/slurm_cli/: __init__.py  __main__.py  agent_query.py  cli.py  config_store.py  dash_logic.py  dash_ui.py  dashboard_forecast.py  forecast_cli.py  forecast_core.py  format_utils.py  interactive_slurm.py  launch_flow.py  partition_policy.py  pickers.py  remote_access.py  search_logic.py  search_ui.py  slurm_backend.py
tests/: test_agent_query.py  test_config_store.py  test_dash_logic.py  test_dash_ui.py  test_forecast_cli.py  test_forecast_partitioning.py  test_interactive_parser.py  test_launch_flow.py  test_partition_policy.py  test_pickers.py  test_remote_access.py  test_search_logic.py  test_slurm_backend.py
