[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slurm-cli"
version = "0.1.0"
description = "OSC-first Slurm workflow CLI for launch/search/dash/remote"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Ollie Proudman" }]
dependencies = []

[project.scripts]
gpu = "slurm_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
